dev/test_programs/INVALID/group1/blankid7.go
package main;

func main(){
	var x int = 3;
	var y int;
	y = _.x;
}

